# gltfviewer

./: CMakeLists.txt  README.md  main.cpp
gltf/: CMakeLists.txt
gltf/include/: renderer.h  window.h
gltf/src/: animator.cpp  model.cpp  renderer.cpp  shader.cpp  window.cpp
